--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   # App Service
   app:
     # Configuration for building the docker image for the service
+    container_name: plansbot
     build:
       context: . # Use an image built from the specified dockerfile in the current directory.
       dockerfile: Dockerfile
@@ -16,3 +17,24 @@ services:
     restart: unless-stopped
     volumes:
       - ./logs:/app/logs
+    depends_on:
+      - db
+
+  db:
+    # We use a mariadb image which supports both amd64 & arm64 architecture
+    image: mariadb:10.6.4-focal
+    command: '--default-authentication-plugin=mysql_native_password'
+    container_name: plansbot_db
+    volumes:
+      - ./db_data:/var/lib/mysql
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=plansbot
+      - MYSQL_DATABASE=plansbot
+      - MYSQL_USER=plansbot
+      - MYSQL_PASSWORD=plansbot
+    ports:
+      - "3306:3306" # Allow connecting to the DB externally
+    expose:
+      - 3306
+      - 33060
